[package]
name = "gabay"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
dirs = "5.0.1"
eyre = "0.6.12"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
